apps/romm/deployment.yaml
---
########### APPLICATION DEPLOYMENT ##########
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: romm
  name: romm-app
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: romm
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
      containers:
        - image: rommapp/romm:4.0.1
          name: romm
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: "/romm/resources"
              name: romm-resources-vol
            - mountPath: "/redis-data"
              name: romm-redis-vol
            - mountPath: "/romm/library"
              name: romm-lib-vol
            - mountPath: "/romm/assets"
              name: romm-assets-vol
            - mountPath: "/romm/config"
              name: romm-config-vol
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      volumes:
        - name: romm-resources-vol
          persistentVolumeClaim:
            claimName: romm-resources-pvc
        - name: romm-redis-vol
          persistentVolumeClaim:
            claimName: romm-redis-pvc
        - name: romm-lib-vol
          persistentVolumeClaim:
            claimName: romm-lib-pvc
        - name: romm-assets-vol
          persistentVolumeClaim:
            claimName: romm-assets-pvc
        - name: romm-config-vol
          persistentVolumeClaim:
            claimName: romm-config-pvc

---
########## NETWORK SERVICES ##########
apiVersion: v1
kind: Service
metadata:
  name: romm-svc
  namespace: media
spec:
  selector:
    app: romm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm-ingress
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "romm.bugaychuk.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: romm-svc
                port:
                  number: 80
