apps/romm/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm-ingress
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "romm.home.arpa"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: romm-svc
                port:
                  number: 80
    - host: "romm.bugaychuk.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: romm-svc
                port:
                  number: 80
